[project]
name = "expense-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.0.3",
    "plotly>=6.6.0",
    "requests>=2.32.5",
    "streamlit>=1.40.1",
    "streamlit-navigation-bar>=3.3.0",
]
